new-product-addeding provided